@@ -1,3 +1,7 @@
+2009-12-03  Juanma Barranquero  <lekktu@gmail.com>
+
+	* progmodes/pascal.el: Require CL when compiling (for lexical-let).
+
 2009-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* hippie-exp.el (try-expand-dabbrev-visible): Preserve point in the
@@ -80,7 +84,7 @@
 	* comint.el (comint-insert-input): Ignore clicks to the right of
 	the field.  Reported by Bob Nnamtrop <bobnnamtrop@gmail.com>.
 
-	* vc.el (vc-print-log-internal): Don't wait for the prcess to
+	* vc.el (vc-print-log-internal): Don't wait for the process to
 	terminate before setting up the major mode.
 
 	* pcmpl-unix.el (pcomplete/cd): Complete more than one argument, just
